--- a/index.html
+++ b/index.html
@@ -6,25 +6,34 @@
 	<body>
 		<div id="controls">
 			<button id="resetAllBtn">Reset all filters</button>
-			<label for="windDirectionFilter">Filter by wind direction:</label>
-			<select id="windDirectionFilter">
-				<option value="all">All</option>
-				<option value="N">North (N)</option>
-				<option value="NE">Northeast (NE)</option>
-				<option value="E">East (E)</option>
-				<option value="SE">Southeast (SE)</option>
-				<option value="S">South (S)</option>
-				<option value="SW">Southwest (SW)</option>
-				<option value="W">West (W)</option>
-				<option value="NW">Northwest (NW)</option>
-				<option value="CALM">Calm</option>
-				<option value="VAR">Variable</option>
-			</select>
-			<label for="startTimeSlider"> Filter by start time:</label>
-
-			<input id="startTimeSlider" type="range" min="0" max="23" value="0" />
-			<span id="timeDisplay">12:00 AM</span>
-			<button id="showAllTimesBtn">Show All Times</button>
+			
+			<div class="filter-section">
+				<h3>WEATHER</h3>
+				<label for="windDirectionFilter">Wind Direction</label>
+				<select id="windDirectionFilter">
+					<option value="all">All</option>
+					<option value="N">North (N)</option>
+					<option value="NE">Northeast (NE)</option>
+					<option value="E">East (E)</option>
+					<option value="SE">Southeast (SE)</option>
+					<option value="S">South (S)</option>
+					<option value="SW">Southwest (SW)</option>
+					<option value="W">West (W)</option>
+					<option value="NW">Northwest (NW)</option>
+					<option value="CALM">Calm</option>
+					<option value="VAR">Variable</option>
+				</select>
+			</div>
+			
+			<div class="filter-section">
+				<h3>TIME</h3>
+				<div class="time-row">
+					<label for="startTimeSlider">Start Time</label>
+					<span id="timeDisplay">12:00 AM</span>
+				</div>
+				<input id="startTimeSlider" type="range" min="0" max="23" value="0" step="1" />
+				<button id="showAllTimesBtn">Show All Times</button>
+			</div>
 		</div>
 		<svg></svg>
 	</body>
