Better styling and read me

--- a/index.html
+++ b/index.html
@@ -207,11 +207,13 @@
 			</select>
 		</div>
 	</div>
-	<div id="crashCounter">
-		<span id="crashCount">0</span>
-		<div>crashes displayed</div>
+	<div id="visualization-container">
+		<div id="crashCounter">
+			<span id="crashCount">0</span>
+			<div>crashes displayed</div>
+		</div>
+		<svg></svg>
 	</div>
-	<svg></svg>
 </body>
 
 <script src="https://d3js.org/d3.v6.min.js"></script>
