Changed "time of day" to "hour of the day" for clarity

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 			<h3>TIME</h3>
 		<div class="filter-item">
 			<div class="label-and-value">
-				<label class="filter-label">Time of Day</label>
+				<label class="filter-label">Hour of the Day</label>
 				<span id="timeDisplay">12:00 AM</span>
 			</div>
 			<div class="reset-and-slider">
